--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
+/* Define variables */
+:root {
+  --violet: #5d58ef;
+}
+
+.quicksand-font-main {
+  font-family: "Quicksand", serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
+}
+
+.raleway-font-second {
+  font-family: "Raleway", serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -5,6 +26,7 @@
   border-radius: 0;
   box-shadow: none;
   box-sizing: border-box;
+
   /* width: 1440rem; */
 }
 
@@ -18,6 +40,7 @@ body {
   /* background-color: gray; */
   margin-right: 8.75rem;
   margin-left: 8.75rem;
+  font-family: "Quicksand", sherif;
 }
 
 /* 
@@ -65,6 +88,28 @@ nav .nav-btn button {
 
 nav .hamburger {
   display: none;
+}
+
+/* 
+-------------------------------------------------------------------
+>>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>HERO
+-------------------------------------------------------------------
+*/
+
+.hero-container {
+  gap: 50px;
+}
+
+.hero-content {
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
+}
+
+.hero-container h1 {
+  font-weight: 700px;
+  font-size: 56px;
+  line-height: 61px;
 }
 
 /* 
