--- a/style/styles.css
+++ b/style/styles.css
@@ -84,6 +84,9 @@ nav .nav-btn button {
   padding-bottom: 0.625rem;
   padding-right: 60.5px;
   padding-left: 60.5px;
+  font-weight: 600px;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 nav .hamburger {
