--- a/style/styles.css
+++ b/style/styles.css
@@ -217,15 +217,57 @@ nav .hamburger {
 */
 
 footer {
+  background: skyblue;
+  padding-bottom: 180px;
+  padding-top: 120px;
+  padding-left: 140px;
+  padding-right: 228px;
   margin-top: 80px;
+}
+
+.footer-container {
   max-width: 1070px;
   margin-right: 9rem;
   margin-left: 9rem;
-  margin-bottom: 180px;
+
+  /* background: skyblue; */
+  /* color: white; */
+}
+
+.footer-title-box {
+  gap: 10px;
+}
+
+.footer-container .footer-title-box h1 {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 40px;
+  color: white;
+  /* background-color: black; */
+}
+
+.footer-container .footer-title-box .footer-img-container {
+  /* height: 100%; */
+  height: 82px;
+  width: 82px;
+}
+
+footer .footer-title-box .footer-img-container img {
+  /* height: 100%; */
+  /* object-fit: cover; */
+}
+
+.footer-content p {
+  font-weight: 400;
+  font-size: 20px;
+  color: white;
+  margin-top: 35px;
+
+  /* background-color: black; */
 }
 
 .footer-content {
-  max-width: 406px;
+  max-width: 30vw;
   margin-right: 172px;
 }
 
@@ -234,14 +276,33 @@ footer {
   flex-direction: column;
 }
 
-footer .footer-list ul {
-  list-style-type: none;
-  flex-direction: column;
+.footer-container h3 {
+  font-weight: 700;
+  font-size: 24px;
+  color: white;
 }
 
-footer .footer-socials ul {
+.footer-container .footer-list ul {
+  margin-top: 32px;
+  list-style-type: none;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer-container .footer-list ul li {
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.footer-container .footer-socials ul {
   list-style-type: none;
   gap: 10px;
+}
+
+.socials {
+  gap: 10px;
+  margin-top: 32px;
 }
 
 /* 
