--- a/style/styles.css
+++ b/style/styles.css
@@ -227,25 +227,21 @@ nav .hamburger {
 
 .stories .cards {
   display: grid;
-  gap: 10px;
-  justify-content: center;
+  /* justify-content: center; */
   grid-template-areas:
     "card-1 card-2 card-3"
     "card-1 card-4 card-5";
   width: 100%;
   height: 39.4rem;
+  margin-top: 80px;
+  text-align: left;
 }
 
 .stories .cards img {
   display: block;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
-}
-
-.stories .cards h2 {
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 38px;
+  object-fit: cover;
 }
 
 .stories .cards .card {
@@ -254,8 +250,13 @@ nav .hamburger {
 
 .stories .card-1 {
   grid-area: card-1;
-  width: 33.75rem;
+  width: 38rem;
   background-color: lightcoral;
+  padding: 0px;
+}
+
+.stories .card-1 img {
+  width: 38rem;
 }
 
 .stories .card-1 h2 {
@@ -266,19 +267,58 @@ nav .hamburger {
   text-align: left;
 }
 
+.stories .cards .card-1 h2 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 38px;
+}
+
 .stories .card-1 p {
   padding-right: 39px;
   padding-left: 39px;
 }
 
-.stories .card-2 {
+.stories .card-3 {
+  grid-area: card-3;
+  background-color: lightgreen;
+}
+
+.card-2 {
   grid-area: card-2;
   background-color: lightblue;
 }
 
-.stories .card-3 {
-  grid-area: card-3;
-  background-color: lightgreen;
+.card-2,
+.card-3,
+.card-4,
+.card-5 {
+  width: 22rem;
+  height: 19rem;
+  object-fit: cover;
+}
+
+.card-2,
+.card-3 {
+  margin-bottom: 20px;
+}
+
+.card-2 img,
+.card-3 img,
+.card-4 img,
+.card-5 img {
+  width: 22rem;
+  height: 177px;
+}
+
+.card-2 h2,
+.card-3 h2,
+.card-4 h2,
+.card-5 h2 {
+  font-weight: 700px;
+  font-size: 15px;
+  line-height: 28px;
+  padding: 38px;
+  text-align: left;
 }
 
 .stories .card-4 {
@@ -457,6 +497,18 @@ footer .footer-title-box .footer-img-container img {
   .curriculum {
     justify-content: center;
     align-items: center;
+  }
+
+  .stories .cards {
+    display: grid;
+    /* justify-content: center; */
+    grid-template-areas:
+      "card-2 card-3"
+      "card-4 card-5";
+    width: 100%;
+    height: 39.4rem;
+    margin-top: 80px;
+    text-align: left;
   }
 
   footer {
