--- a/style/styles.css
+++ b/style/styles.css
@@ -79,7 +79,7 @@ nav,
 }
 
 .footer-container {
-  max-width: 80vw;
+  /* min-width: 100vw; */
 }
 
 .btn-primary button {
@@ -483,13 +483,12 @@ footer {
   /* padding-left: 8.75rem;
   padding-right: 8.75rem; */
   margin-top: 5rem;
+  z-index: 2;
+  width: 99vw;
   /* max-width: 100%; */
   /* width: auto; */
   /* margin-right: 8.75rem;
   margin-left: 8.75rem; */
-}
-
-.footer-container {
 }
 
 .footer-title-box {
@@ -767,7 +766,7 @@ footer .footer-title-box .footer-img-container img {
   }
 
   footer {
-    width: auto;
+    /* width: auto; */
     font-family: "Quicksand", sherif;
     /* margin-right: 8,75rem;
     margin-left: 8.75rem; */
@@ -776,6 +775,8 @@ footer .footer-title-box .footer-img-container img {
     /* margin: 0px; */
     margin-top: 2.5rem;
     /* padding: 0px; */
+    background-color: skyblue;
+    margin-left: -5vw;
   }
 
   .footer-container {
